<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:useDefaultMargins="true"
    android:columnCount="4" >

    <TextView
        android:layout_columnSpan="4"
        android:layout_gravity="center_horizontal"
        android:text="@string/tv1"
        android:textSize="20dip" />

    <TextView
        android:text="@string/tv2"
        android:layout_gravity="right" />

    <EditText
        android:id="@+id/et1"
        android:ems="8"
        android:layout_columnSpan="2"/>

    <TextView
        android:text="@string/tv3"
        android:layout_column="0"
        android:layout_gravity="right"/>

    <EditText
        android:id="@+id/et2"
        android:ems="8"
        android:layout_columnSpan="2" />

    <Button
        android:id="@+id/btn1"
        android:text="@string/btn1"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"/>

    <Button
        android:id="@+id/btn2"
        android:text="@string/btn2"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"/>

    <Button
        android:id="@+id/btn4"
        android:layout_column="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/btn4" />

</GridLayout>
